# lava-timer

./: LICENSE  README.md  package-lock.json  package.json
design-demos/: timer-edge-states-demo.html
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
