[package]
name = "lava-timer"
version = "0.1.0"
description = "A lightweight macOS menu bar focus timer"
authors = ["10tenet10"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lava_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSWorkspace"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSDistributedNotificationCenter", "NSNotification", "NSOperation", "NSString", "block2"] }
